stage0/tests/snapshots/program__tests_fixtures_programs_basic_quoted_string.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/quoted_string.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Riot says "hello"
stderr:
<empty>
