stage0/tests/snapshots/program__tests_fixtures_programs_basic_record_pattern_bindings.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/record_pattern_bindings.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
5
6
stderr:
<empty>
