stage0/tests/snapshots/program__tests_fixtures_programs_basic_record_patterns.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/record_patterns.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
41
2
stderr:
<empty>
