stage0/tests/snapshots/program__tests_fixtures_programs_basic_runtime_record_field.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/runtime_record_field.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
10
20
stderr:
<empty>
