stage0/tests/snapshots/program__tests_fixtures_programs_basic_runtime_scalar_literals.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/basic/runtime_scalar_literals.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
q
2.0
stderr:
<empty>
