stage0/tests/snapshots/program__tests_fixtures_programs_basic_runtime_structural_equality.snap
---
source: tests/fixtures.rs
assertion_line: 5957
expression: transcript
---
fixture: tests/fixtures/programs/basic/runtime_structural_equality.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
structural equality
stderr:
<empty>
