stage0/tests/snapshots/program__tests_fixtures_programs_basic_string_operations.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/string_operations.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
0
4
hello world
riot lang
abc
stderr:
<empty>
